test/classes/assignments/noAssignClass.good
noAssignClass.chpl:5: error: Can't overload assignments for class types
